SERVER-81057 Include 'let' parameters in writes without shard key